Add dummy test data for GitHub Actions compatibility
- Created sample.qif with minimal test transactions covering all test cases
- Created simple mapping files (categories.csv, payees.csv, accounts.csv, tags.csv)
- Removed large private financial data files
- Updated .gitignore to exclude only large Financial*.qif files, not entire testdata/
- All tests pass locally with dummy data
- GitHub Actions CI/CD can now run tests without accessing private data

--- a/.gitignore
+++ b/.gitignore
@@ -23,5 +23,5 @@ go.work.sum
 
 # env file
 .env
-# Private test data
-test/testdata/
+# Exclude large private financial data files (keep dummy test data)
+test/testdata/Financial*.qif
